--- a/style.css
+++ b/style.css
@@ -116,12 +116,12 @@ section {
 }
 #sekcija_skuter {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./Slike/riderYamaha.jpg");
+    url("./Slike/YamahaScoterBackgroud.jpg");
 }
 
 #sekcija_cetvorotockas {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./Slike/riderYamaha.jpg");
+    url("./Slike/yamahaATVbackground.jpg");
 }
 
 #sekcija_oprema {
@@ -151,14 +151,23 @@ section {
   color: white;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: rgb(70, 70, 70);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  flex-direction: column;
 }
 
 footer {
   width: 100%;
   height: 25vh;
-  background-color: grey;
+  background-color: rgb(70, 70, 70);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+footer a {
+  color: white;
+  font-size: 50px;
 }
