--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ section {
 
 #sekcija_oprema {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./Slike/riderYamaha.jpg");
+    url("./Slike/yamahaGear.jpg");
 }
 
 .card {
@@ -157,7 +157,9 @@ section {
   border-bottom-right-radius: 10px;
   flex-direction: column;
 }
-
+.card_text a {
+  color: white;
+}
 footer {
   width: 100%;
   height: 25vh;
