--- a/style.css
+++ b/style.css
@@ -157,6 +157,19 @@ section {
   border-bottom-right-radius: 10px;
   flex-direction: column;
 }
+.card_text_smaller {
+  width: 100%;
+  height: 30%;
+  font-size: 15px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: rgb(70, 70, 70);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  flex-direction: column;
+}
 .card_text a {
   color: white;
 }
