--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ section {
   border-bottom-right-radius: 10px;
   flex-direction: column;
 }
-.card_text_smaller {
+.manji_card_text {
   width: 100%;
   height: 30%;
   font-size: 15px;
@@ -175,7 +175,7 @@ section {
 }
 footer {
   width: 100%;
-  height: 25vh;
+  height: 15vh;
   background-color: rgb(70, 70, 70);
   display: flex;
   align-items: center;
@@ -184,5 +184,5 @@ footer {
 
 footer a {
   color: white;
-  font-size: 50px;
+  font-size: 40px;
 }
